syntax = "proto3";
option go_package = "github.com/butlerhq/butler/api/services/octopus/v1;octopus";
package v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "services/octopus/v1/requests.proto";
import "services/octopus/v1/responses.proto";

service OctopusService {
  rpc ListWorkspaceConnectors(WorkspaceConnectorsRequest) returns (WorkspaceConnectorList) {
    option (google.api.http) = {
      post: "/v1/connector"
      body: "*"
    };
  }
  rpc ConnectWithCode(ConnectWithCodeRequest) returns (WorkspaceConnector) {
    option (google.api.http) = {
      post: "/v1/connector/connect/oauth"
      body: "*"
    };
  }

  rpc SelectAccount(SelectAccountRequest) returns (WorkspaceConnector) {
    option (google.api.http) = {
      post: "/v1/data-sources/accounts/setup"
      body: "*"
    };
  }

  rpc GetConnectorSecret(GetConnectorSecretRequest) returns (ConnectorSecretPair) {}
}